# Chat-Program

./: CMakeLists.txt  README.md
Client/: BoostClient.cpp  BoostClient.h  CMakeLists.txt  Client.cpp  Client.h
ClientApp/: CMakeLists.txt  ClientApp.cpp  ClientLogin.cpp  ClientLogin.h  ClientLogin.ui  ClientWindow.cpp  ClientWindow.h  ClientWindow.ui
Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Server/: CMakeLists.txt  Server.cpp  Server.h
ServerApp/: CMakeLists.txt  ServerApp.cpp
